ajustement de la responsivite sur le cv modification du nom du de max_width_400px en maw_width_500px ajustement sur le reponsive de 1225px et modification des liens sur la page html

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
     <meta charset="UTF-8">
@@ -7,13 +7,14 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="fontawesome-free-5.12.1-web/css/solid.min.css">
     <link rel="stylesheet" href="fontawesome-free-5.12.1-web/css/fontawesome.min.css">
+    <link rel="stylesheet" media="screen and (width: 2560px)" href="max_width_tv.css">
     <link rel="stylesheet" media="screen and (max-width:1225px)" href="max_width_1225px.css">
     <link rel="stylesheet" media="screen and (max-width:768px)" href="max_width_768px.css">
-    <link rel="stylesheet" media="screen and (width:500px)" href="max_width_400px.css">
+    <link rel="stylesheet" media="screen and (width:500px)" href="max_width_500px.css">
     <link rel="stylesheet" media="screen and (max-width:425px)" href="max_width_425px.css">
     <link rel="stylesheet" media="screen and (max-width:375px)" href="max_width_375px.css">
     <link rel="stylesheet" media="screen and (max-width:320px)" href="max_width_320px.css">
-    <link rel="stylesheet" media="screen and (width: 2560px)" href="max_width_tv.css">
+
 
 
 
@@ -38,7 +39,7 @@
                     <img src="photo/gandalf.jpg " alt="photo de profil ">
                 </div>
             </aside>
-            <div class="separateur ">
+            <div class="separateur">
                 <span class="fas fa-phone-alt "></span> Contact
             </div>
             <div class="description_nav ">
