--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Cette page Web et une page Web d'un CV responsive pour le projet demandé par openclassrooms">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="fontawesome-free-5.12.1-web/css/solid.min.css">
     <link rel="stylesheet" href="fontawesome-free-5.12.1-web/css/fontawesome.min.css">
