--- a/index.html
+++ b/index.html
@@ -5,17 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Cette page Web et une page Web d'un CV responsive pour le projet demandé par openclassrooms">
-    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="fontawesome-free-5.12.1-web/css/solid.min.css">
     <link rel="stylesheet" href="fontawesome-free-5.12.1-web/css/fontawesome.min.css">
-    <link rel="stylesheet" media="screen and (width: 2560px)" href="max_width_tv.css">
-    <link rel="stylesheet" media="screen and (max-width:1225px)" href="max_width_1225px.css">
-    <link rel="stylesheet" media="screen and (max-width:768px)" href="max_width_768px.css">
-    <link rel="stylesheet" media="screen and (width:500px)" href="max_width_500px.css">
-    <link rel="stylesheet" media="screen and (max-width:425px)" href="max_width_425px.css">
-    <link rel="stylesheet" media="screen and (max-width:375px)" href="max_width_375px.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" media="screen and (max-width:2560px) and (min-width:1441px)" href="max_width_tv.css">
+    <link rel="stylesheet" media="screen and (max-width:1440px) and (min-width:1025px)" href="style.css">
+    <link rel="stylesheet" media="screen and (max-width:1024px) and (min-width:769px)" href="max_width_1024px.css">
+    <link rel="stylesheet" media="screen and (max-width:768px) and (min-width:426px)" href="max_width_768px.css">
+    <link rel="stylesheet" media="screen and (max-width:425px) and (min-width:376px)" href="max_width_425px.css">
+    <link rel="stylesheet" media="screen and (max-width:375px) and (min-width:321px)" href="max_width_375px.css">
     <link rel="stylesheet" media="screen and (max-width:320px)" href="max_width_320px.css">
-
 
     <title>CV Stephane Thiebaut</title>
 </head>
@@ -42,7 +41,7 @@
             <div class="description_nav ">
                 <p>Telephone : 06 00 00 00 00</p>
                 <p>Address : mon address 06190</p>
-                <p>site : <a href="phane-maker.github.io/cv/">Site Web</a></p>
+                <p>site : <a href="stephane-maker.github.io/cv/">Site Web</a></p>
                 <p>Email : <a href="mailto:stephanethiebautjob@gmail.com">mon email</a></p>
                 <p>github: <a href="https://github.com/Stephane-maker/cv">Github</a></p>
             </div>
