ajout des lien sur la feuille index.html et modification de la taille des liens et modification des marge sur les feuille de style.css pour la classe recommandation

--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
             <div class="description_nav ">
                 <p>Telephone : 06 00 00 00 00</p>
                 <p>Address : mon address 06190</p>
-                <p>site : <a href="stephane-maker.github.io/cv/">Site Web</a></p>
-                <p>Email : <a href="mailto:stephanethiebautjob@gmail.com">mon email</a></p>
-                <p>github: <a href="https://github.com/Stephane-maker/cv">Github</a></p>
+                <p>site : <a href="stephane-maker.github.io/cv/">https://stephane-maker.github.io/cv/</a></p>
+                <p>Email : <a href="mailto:stephanethiebautjob@gmail.com">stephanethiebautjob@gmail.com</a></p>
+                <p>github: <a href="https://github.com/Stephane-maker/cv">https://github.com/Stephane-maker/cv</a></p>
             </div>
             <div class="separateur ">
                 <span class="fas fa-user-secret "></span> A propos de moi</div>
