--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" media="screen and (max-width:425px) and (min-width:376px)" href="max_width_425px.css">
     <link rel="stylesheet" media="screen and (max-width:375px) and (min-width:321px)" href="max_width_375px.css">
     <link rel="stylesheet" media="screen and (max-width:320px)" href="max_width_320px.css">
+    <link rel="stylesheet" media="screen and (max-width:550px) and (min-width:500px)" href="max_width_500px.css">
 
     <title>CV Stephane Thiebaut</title>
 </head>
