ajout de la photo de profil et modification des feuille de style css en fonction de la photo de profil

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="container">
         <div class="titre_responsive">
             <div class="photo_responsive ">
-                <img src="photo/gandalf.jpg " alt="photo de profil ">
+                <img src="photo/photo_stephane_thiebaut.png " alt="photo de profil ">
             </div>
             <h1>Stephane Thiebaut</h1>
             <p>Developpeur Web Junior</p>
@@ -33,7 +33,7 @@
         <nav>
             <aside>
                 <div class="photo ">
-                    <img src="photo/gandalf.jpg " alt="photo de profil ">
+                    <img src="photo/photo_stephane_thiebaut.png " alt="photo de profil ">
                 </div>
             </aside>
             <div class="separateur">
